<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="dialog"
            type="com.mskwak.presentation.ui.dialog.DeleteConfirmDialog" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="150dp"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_delete_confirm"
            android:textColor="@color/dim_black_70"
            android:textSize="@dimen/text_medium"
            app:layout_constraintBottom_toTopOf="@id/tv_delete"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@color/gray_50"
            android:onClick="@{() -> dialog.dismiss()}"
            android:padding="12dp"
            android:text="@string/cancel"
            android:textColor="@color/gray_600"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tv_delete"
            app:layout_constraintTop_toTopOf="@id/tv_delete" />

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/green_600"
            android:onClick="@{() -> dialog.onDeleteClick()}"
            android:padding="12dp"
            android:text="@string/delete"
            android:textColor="@color/dim_gray_10_85"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>