<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mskwak.presentation.ui.dialog_diary.edit_diary.DiaryEditViewModel" />

        <variable
            name="dialog"
            type="com.mskwak.presentation.ui.dialog_diary.edit_diary.DiaryEditDialog" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/transparent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@{viewModel.plantName}"
                android:textColor="@color/dim_black_70"
                android:textSize="@dimen/text_large"
                android:textStyle="bold"
                tools:text="식물이름" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_close_black"
                android:contentDescription="@null"
                android:onClick="@{() -> dialog.onCloseClick()}" />

            <TextView
                android:id="@+id/tv_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:onClick="@{() -> viewModel.saveDiary()}"
                android:text="@string/save"
                android:textColor="@color/dim_black_70"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="16dp"
                android:paddingTop="10dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_addPicture"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:onClick="@{() -> dialog.onNewPictureClick()}"
                    android:src="@drawable/add_photo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/roundedCorner" />

                <View
                    android:id="@+id/divider_picture"
                    android:layout_width="1dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="8dp"
                    android:background="@color/gray_400"
                    app:layout_constraintStart_toEndOf="@id/iv_addPicture"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_picture"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="8dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/divider_picture"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:listitem="@layout/layout_item_add_picture" />

                <com.mskwak.presentation.ui.custom_component.TextViewWithIcon
                    android:id="@+id/tv_dateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:iconRes="@drawable/ic_event_black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_addPicture"
                    app:text="@string/date" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rectangle_gray_box_bg"
                    android:gravity="center_vertical"
                    android:minHeight="40dp"
                    android:onClick="@{() -> dialog.onDateClick()}"
                    android:paddingHorizontal="16dp"
                    android:textColor="@color/dim_black_70"
                    android:textSize="@dimen/text_medium"
                    app:layout_constraintTop_toBottomOf="@id/tv_dateLabel"
                    app:localDate="@{viewModel.diaryDate}"
                    tools:text="2022.02.22" />

                <EditText
                    android:id="@+id/edit_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:autofillHints="no"
                    android:background="@drawable/rectangle_gray_box_bg"
                    android:gravity="top"
                    android:hint="@string/diary_content_hint"
                    android:inputType="textMultiLine"
                    android:lines="17"
                    android:maxLines="17"
                    android:padding="10dp"
                    android:scrollbars="vertical"
                    android:text="@={viewModel.contentText}"
                    app:layout_constraintTop_toBottomOf="@id/tv_date" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>